# robotExp

./: install_dependence.sh  ros2support.cmake
src/config/map/map_0/: batch_info.json  info.csv
src/config/map/map_exp/: batch_info.json  info.csv
src/config/map/map_xep/: info.csv
src/config/net_model/intention/: intention_model.pt
src/config/robot/: robot_0.json  robot_1.json
src/message/: CMakeLists.txt  package.xml
src/message/msg/: EnvState.msg  IntVec.msg  RobotCtrl.msg  TaskState.msg
src/message/srv/: RobotAllocation.srv  RobotIntention.srv
src/net_model/allocation/: allocation.pt
src/net_model/intention/: intention.pt
src/neural_network/: package.xml  setup.cfg  setup.py
src/neural_network/neural_network/: allocation.py  ga_allocation_lib.py  greedy_allocation_lib.py  intention.py  ringbuffer.py  robot.py
src/robot/: CMakeLists.txt  package.xml
src/robot/config/: exp_launch.yaml  robot_launch.yaml  sim_launch.yaml
src/robot/config/rviz2/: exp_map.rviz  sim.rviz
src/robot/include/robot/: exp_map_node.cpp  exp_map_node.hpp  hybrid_astar.hpp  map.hpp  network.hpp  robot.hpp  robot_exp_node.hpp  robot_node.hpp  sim_map_node.hpp
src/robot/launch/: exp_map_launch.py  exp_robot_launch.py  sim_launch.py
src/robot/src/: exp_map_node.cc  hybrid_astar.cpp  map.cpp  network.cpp  nmpc.cpp  robot.cpp  robot_exp_node.cc  robot_node.cc  sim_map_node.cc
src/script/: map_gen.py
src/script/net/: allocation.py  intention.py  module.py  net_export.py
